# comp535groupRSA

./: .gitignore  Documentation  README.md
compare/: rsa_image_encrypter.c
cuda/: CMakeLists.txt
cuda/header/: arg_handler.hpp  cuda_image_encrypter.cuh  image.hpp  image_handler.hpp  rsa_keygen.h  util.hpp
cuda/src/: arg_handler.cpp  cuda_image_encrypter.cu  image.cpp  image_handler.cpp  main.cpp  rsa_keygen.c  util.cpp
parallel/: read_images_encrypt.c  rsa_image_encrypter.c
sequential/: decrypt.c  read_images_encrypt.c  rsa_image_encrypter.c
